# agda-minimal-backend

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agda2min.cabal  agda2rust.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Main.hs
src/Agda/Compiler/Rust/: Backend.hs
test/: Hello.agda  Hello.rs  RustBackendTest.hs  Test.txt
